# circ.io

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
client/: CMakeLists.txt  game_client.cpp  game_client.hpp  main.cpp
cmake/: mingw-w64-toolchain.cmake
common/: eastl_allocator.cpp  protocol.hpp
scripts/: build_linux.sh  build_macos.sh  build_windows.sh
server/: CMakeLists.txt  game_server.cpp  game_server.hpp  main.cpp
tests/: CMakeLists.txt  test_connection.cpp  test_main.cpp  test_messages.cpp
